--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   file_picker: ^8.0.3
   share_plus: ^11.0.0
   flutter_sharing_intent: ^1.1.1
+  sqflite: ^2.4.2
 
 dev_dependencies:
   flutter_test:
