--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   share_plus: ^11.0.0
   flutter_sharing_intent: ^1.1.1
   sqflite: ^2.4.2
+  open_file: ^3.5.10
 
 dev_dependencies:
   flutter_test:
