--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_sharing_intent: ^1.1.1
   sqflite: ^2.4.2
   open_file: ^3.5.10
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
